actualizacion psql-info